# blog_code_examples

CTPR/: CMakeLists.txt  abs_config.h  main.cpp  network_service_config.cpp  network_service_config.h
modern_cmake_and_mocking/: CMakeLists.txt
modern_cmake_and_mocking/src/: CMakeLists.txt
modern_cmake_and_mocking/src/app/: CMakeLists.txt  main.cpp
modern_cmake_and_mocking/src/file_sanitizer/: CMakeLists.txt  file_reader.cpp  file_reader.h  file_sanitizer.cpp  file_sanitizer.h
modern_cmake_and_mocking/tests/: CMakeLists.txt
modern_cmake_and_mocking/tests/file_sanitizer/: CMakeLists.txt  file_reader_mock.cpp  file_reader_mock.h  test.cpp
std_format/: CMakeLists.txt  conanfile.py
std_format/example/: CMakeLists.txt  main.cpp
threadding/: .gitignore  CMakeLists.txt  conanfile.py
threadding/dict_based_pass_crack/: CMakeLists.txt  cracker.cpp  cracker.h  main.cpp
